Fix std-benchmarks/Bench/run